--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ decord==0.6.0
 hyperpyyaml==1.2.2
 soundfile==0.12.1
 transformers==4.52.4
-# flash_attn==2.7.0  # to accelerate installation process, please install  ${YOUR_MODEL_PATH}/flash_attn-2.7.0.post1%2Bcu12torch2.4cxx11abiFALSE-cp310-cp310-linux_x86_64.whl
+# flash_attn==2.7.0  # to accelerate installation process, please download wheel package by `wget https://github.com/Dao-AILab/flash-attention/releases/download/v2.7.0.post1/flash_attn-2.7.0.post1+cu12torch2.4cxx11abiFALSE-cp310-cp310-linux_x86_64.whl`
 x_transformers
 torchdiffeq
 torchtune
