--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ torchvision==0.21.0
 tokenizers
 grouped_gemm==0.1.4
 # funasr==1.1.14
-peft==0.13.2
+peft==0.17.1
 diffusers==0.33.0
 decord==0.6.0
 hyperpyyaml==1.2.2
@@ -16,3 +16,4 @@ torchdiffeq
 torchtune
 torchao
 ipynbname
+accelerate==1.3.0
